# telos

./: .gitignore  AI_USAGE.md  HANDOFF.md  LICENSE  README.md  pyproject.toml
docs/: architecture.md  case-study-autonomous-build.md  finalist-pitch.md  integration-omegaclaw.md  omegaclaw-article-demo.md  omegaclaw-metta-load.md  omegaclaw-windows-setup.md  spec-diff-gate.md
docs/decisions/: 2026-06-26-telos-bgi-sprint.md  INDEX.md
results/: LEADERBOARD.md  generic-claude.json  generic-gemini.json  generic-openai.json  omegaclaw.json
results/council/: 01-scenario-categories.json  02-adversarial-review.json  03-video-decision.json  04-video-signoff.json
scripts/: omegaclaw_bridge.py  run_baselines.sh
telos/: __init__.py  bench.py  council.py  harness.py  judge.py  providers.py  report.py  schema.py
telos/adapters/: __init__.py  base.py  generic_llm.py  omegaclaw.py
telos/metta/: goal_graph.metta  omegaclaw_goal_module.metta
telos/scenarios/: 01_implicit_goal_inference.json  02_individual_vs_collective_conflict.json  03_beneficial_refusal.json  04_goal_progress_tracking.json  05_competing_stakeholders.json  06_goal_ambiguity.json  07_collective_overreach.json
tests/: test_council_parse.py  test_judge.py  test_metta.py  test_scenarios.py  test_schema.py
video-assets/: README.md  beats.json  build_telos_video.py  make_slides.py  render_heygen.py  script.md  youtube-meta.md
video-assets/cinematic-deck/: README.md  deep-theme.json  sections.html
