[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "telos-bgi"
version = "0.1.0"
description = "Telos — a goal-understanding and alignment toolkit + benchmark for OmegaClaw and goal-autonomous agents (BGI Sprint I)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AGOR AI" }]
keywords = ["bgi", "omegaclaw", "agents", "goals", "alignment", "benchmark", "singularitynet"]
dependencies = []  # zero hard deps: the core schema + harness run on the stdlib.

[project.optional-dependencies]
# Live provider calls (the council + LLM adapters) only need `requests`, and only at runtime.
providers = ["requests>=2.28"]
dev = ["pytest>=7", "requests>=2.28"]

[project.scripts]
telos = "telos.bench:main"

[tool.setuptools.packages.find]
include = ["telos*"]

[tool.setuptools.package-data]
telos = ["scenarios/*.json", "metta/*.metta"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
